--- a/Makefile.am
+++ b/Makefile.am
@@ -10,11 +10,13 @@ ADDONNAME       = pvr.stalker.client
 LIBNAME         = libstalkerclient-addon
 lib_LTLIBRARIES = libstalkerclient-addon.la
 
-LIBS            = @abs_top_srcdir@/lib/tinyxml/libtinyxml.la
+LIBS            = @abs_top_srcdir@/lib/tinyxml/libtinyxml.la \
+                  @abs_top_srcdir@/lib/jsoncpp/libjsoncpp.la
 
 include ../Makefile.include.am
 
-libpvrdemo_addon_la_SOURCES = src/client.cpp \
-                              src/PVRDemoData.cpp
-libpvrdemo_addon_la_LDFLAGS = @TARGET_LDFLAGS@
-
+libstalkerclient_addon_la_SOURCES = src/client.cpp \
+                                    src/PVRDemoData.cpp \
+                                    src/SAPI.cpp \
+                                    src/HTTPSocket.cpp
+libstalkerclient_addon_la_LDFLAGS = @TARGET_LDFLAGS@
