--- a/project/VS2010Express/pvrclient_stalker_client.vcxproj.filters
+++ b/project/VS2010Express/pvrclient_stalker_client.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClCompile Include="..\..\src\PVRDemoData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\HTTPSocket.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\SAPI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\client.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\PVRDemoData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\HTTPSocket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\SAPI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
