--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ LIBS            = @abs_top_srcdir@/lib/tinyxml/libtinyxml.la \
 include ../Makefile.include.am
 
 libstalkerclient_addon_la_SOURCES = src/client.cpp \
-                                    src/PVRDemoData.cpp \
+                                    src/SData.cpp \
                                     src/SAPI.cpp \
                                     src/HTTPSocket.cpp
 libstalkerclient_addon_la_LDFLAGS = @TARGET_LDFLAGS@
