--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,12 @@ enable_language(CXX)
 
 find_package(kodi REQUIRED)
 find_package(kodiplatform REQUIRED)
+find_package(platform REQUIRED)
 find_package(TinyXML REQUIRED)
 find_package(JsonCpp REQUIRED)
 
 include_directories(${kodiplatform_INCLUDE_DIRS}
+                    ${platform_INCLUDE_DIRS}
                     ${KODI_INCLUDE_DIR}
                     ${PROJECT_SOURCE_DIR}/lib
                     ${TINYXML_INCLUDE_DIRS}
@@ -19,7 +21,7 @@ include_directories(${kodiplatform_INCLUDE_DIRS}
 
 add_subdirectory(lib/libstalkerclient)
 
-set(DEPLIBS ${kodiplatform_LIBRARIES} stalkerclient ${TINYXML_LIBRARIES} ${JSONCPP_LIBRARIES})
+set(DEPLIBS ${platform_LIBRARIES} stalkerclient ${TINYXML_LIBRARIES} ${JSONCPP_LIBRARIES})
 
 if(WIN32)
   list(APPEND DEPLIBS ws2_32)
