--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: kodi-pvr-stalker
 Priority: extra
 Maintainer: Nobody <nobody@kodi.tv>
 Build-Depends: debhelper (>= 9.0.0), cmake, kodi-pvr-dev,
-               libkodiplatform-dev, kodi-addon-dev,
+               libkodiplatform-dev (>= 16.0.0), kodi-addon-dev,
                libjsoncpp-dev, libtinyxml-dev
 Standards-Version: 3.9.4
 Section: libs
