added user authentication support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,9 +28,11 @@ if(WIN32)
 endif()
 
 set(STALKER_SOURCES src/client.cpp
+                    src/CWatchdog.cpp
                     src/HTTPSocket.cpp
                     src/SAPI.cpp
                     src/SData.cpp
+                    src/Utils.cpp
                     src/XMLTV.cpp)
 
 build_addon(pvr.stalker STALKER DEPLIBS)
