--- a/pvr.stalker/addon.xml.in
+++ b/pvr.stalker/addon.xml.in
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="pvr.stalker"
-  version="0.9.4"
+  version="0.9.5"
   name="Stalker Client"
-  provider-name="dvbken">
+  provider-name="kenji123">
   <requires>
     <c-pluff version="0.1"/>
     <import addon="xbmc.pvr" version="3.0.0"/>
