--- a/pvr.stalker/addon.xml.in
+++ b/pvr.stalker/addon.xml.in
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="pvr.stalker"
-  version="1.0.1"
+  version="1.0.2"
   name="Stalker Client"
   provider-name="Jamal Edey">
   <requires>
     <c-pluff version="0.1"/>
     <import addon="xbmc.pvr" version="4.1.0"/>
+    <import addon="kodi.guilib" version="5.10.0"/>
   </requires>
   <extension
     point="xbmc.pvrclient"
