--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,17 @@ matrix:
       compiler: clang
     - os: osx
       osx_image: xcode7.3
+    - os: osx
+      osx_image: xcode6.1
 
 #
 # Some of the OS X images don't have cmake, contrary to what people 
 # on the Internet say
 #
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then which cmake || brew update                   ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update                                  ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then which cmake || brew install cmake            ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink json-c                           ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install jsoncpp                         ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq                    ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq -y libjsoncpp-dev ; fi
