[xmltv] replace tinyxml with libxml2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ enable_language(CXX)
 find_package(Kodi REQUIRED)
 find_package(kodiplatform REQUIRED)
 find_package(p8-platform REQUIRED)
+find_package(LibXml2 REQUIRED)
 find_package(TinyXML REQUIRED)
 find_package(JsonCpp REQUIRED)
 
@@ -16,12 +17,13 @@ include_directories(${kodiplatform_INCLUDE_DIRS}
                     ${p8-platform_INCLUDE_DIRS}
                     ${KODI_INCLUDE_DIR}
                     ${PROJECT_SOURCE_DIR}/lib
+                    ${LIBXML2_INCLUDE_DIR}
                     ${TINYXML_INCLUDE_DIRS}
                     ${JSONCPP_INCLUDE_DIRS})
 
 add_subdirectory(lib/libstalkerclient)
 
-set(DEPLIBS ${p8-platform_LIBRARIES} stalkerclient ${TINYXML_LIBRARIES} ${JSONCPP_LIBRARIES})
+set(DEPLIBS ${p8-platform_LIBRARIES} stalkerclient ${LIBXML2_LIBRARIES} ${TINYXML_LIBRARIES} ${JSONCPP_LIBRARIES})
 
 if(WIN32)
   list(APPEND DEPLIBS ws2_32)
