--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,37 +10,39 @@ find_package(Kodi REQUIRED)
 find_package(kodiplatform REQUIRED)
 find_package(p8-platform REQUIRED)
 find_package(LibXml2 REQUIRED)
-find_package(TinyXML REQUIRED)
 find_package(JsonCpp REQUIRED)
 
-include_directories(${kodiplatform_INCLUDE_DIRS}
-                    ${p8-platform_INCLUDE_DIRS}
-                    ${KODI_INCLUDE_DIR}
-                    ${PROJECT_SOURCE_DIR}/lib
-                    ${LIBXML2_INCLUDE_DIR}
-                    ${TINYXML_INCLUDE_DIRS}
-                    ${JSONCPP_INCLUDE_DIRS})
+include_directories(
+        ${kodiplatform_INCLUDE_DIRS}
+        ${p8-platform_INCLUDE_DIRS}
+        ${KODI_INCLUDE_DIR}
+        ${PROJECT_SOURCE_DIR}/lib
+        ${LIBXML2_INCLUDE_DIR}
+        ${JSONCPP_INCLUDE_DIRS})
 
 add_subdirectory(lib/libstalkerclient)
 
-set(DEPLIBS ${p8-platform_LIBRARIES} stalkerclient ${LIBXML2_LIBRARIES} ${TINYXML_LIBRARIES} ${JSONCPP_LIBRARIES})
+set(DEPLIBS
+        ${p8-platform_LIBRARIES}
+        stalkerclient
+        ${LIBXML2_LIBRARIES}
+        ${JSONCPP_LIBRARIES})
 
-if(WIN32)
-  list(APPEND DEPLIBS ws2_32)
-endif()
+set(BASE_SOURCES
+        src/base/Cache.cpp)
 
-set(BASE_SOURCES src/base/Cache.cpp)
+set(SOURCES
+        src/client.cpp
+        src/CWatchdog.cpp
+        src/HTTPSocket.cpp
+        src/SAPI.cpp
+        src/SData.cpp
+        src/Utils.cpp
+        src/XMLTV.cpp)
 
-set(SOURCES src/client.cpp
-            src/CWatchdog.cpp
-            src/HTTPSocket.cpp
-            src/SAPI.cpp
-            src/SData.cpp
-            src/Utils.cpp
-            src/XMLTV.cpp)
-
-set(STALKER_SOURCES ${BASE_SOURCES}
-                    ${SOURCES})
+set(STALKER_SOURCES
+        ${BASE_SOURCES}
+        ${SOURCES})
 
 build_addon(pvr.stalker STALKER DEPLIBS)
 
