refactor stalker lib

--- a/lib/libstalkerclient/CMakeLists.txt
+++ b/lib/libstalkerclient/CMakeLists.txt
@@ -8,11 +8,21 @@ find_package(ZLIB REQUIRED)
 find_package(LibXml2 REQUIRED)
 
 include_directories(${LIBXML2_INCLUDE_DIR})
-file(GLOB LIBSTALKER_SOURCES *.c)
+
+set(LIBSTALKER_SOURCES
+        identity.c
+        itv.c
+        list.c
+        param.c
+        request.c
+        stb.c
+        util.c
+        watchdog.c
+        xmltv.c)
 
 add_library(stalkerclient STATIC ${LIBSTALKER_SOURCES})
 target_link_libraries(stalkerclient ${ZLIB_LIBRARIES} ${LIBXML2_LIBRARIES})
 
-if(NOT WIN32)
-  set_target_properties(stalkerclient PROPERTIES COMPILE_FLAGS "-fPIC")
-endif()
+if (NOT WIN32)
+    set_target_properties(stalkerclient PROPERTIES COMPILE_FLAGS "-fPIC")
+endif ()
