--- a/pvr.stalker/addon.xml.in
+++ b/pvr.stalker/addon.xml.in
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="pvr.stalker"
-  version="3.0.1"
+  version="3.0.2"
   name="Stalker Client"
   provider-name="Jamal Edey">
   <requires>
     <c-pluff version="0.1"/>
-    <import addon="xbmc.pvr" version="5.2.2"/>
+    <import addon="kodi.global.main" version="@ADDON_GLOBAL_VERSION_MAIN@"/>
+    <import addon="kodi.instance.pvr" version="@ADDON_INSTANCE_VERSION_PVR@"/>
   </requires>
   <extension
     point="xbmc.pvrclient"
