--- a/pvr.stalker/addon.xml.in
+++ b/pvr.stalker/addon.xml.in
@@ -4,10 +4,7 @@
   version="3.0.1"
   name="Stalker Client"
   provider-name="Jamal Edey">
-  <requires>
-    <c-pluff version="0.1"/>
-    <import addon="xbmc.pvr" version="5.2.2"/>
-  </requires>
+  <requires>@ADDON_DEPENDS@</requires>
   <extension
     point="xbmc.pvrclient"
     library_@PLATFORM@="@LIBRARY_FILENAME@"/>
