--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: kodi-pvr-stalker
 Priority: extra
 Maintainer: Nobody <nobody@kodi.tv>
-Build-Depends: debhelper (>= 9.0.0), cmake, kodi-pvr-dev,
+Build-Depends: debhelper (>= 9.0.0), cmake,
                libkodiplatform-dev (>= 16.0.0), kodi-addon-dev,
                zlib1g-dev, libxml2-dev, libjsoncpp-dev
 Standards-Version: 3.9.4
