[win10] update patch for libxml2

--- a/depends/windowsstore/libxml2/CMakeLists.txt
+++ b/depends/windowsstore/libxml2/CMakeLists.txt
@@ -421,7 +421,7 @@ target_link_libraries(xml2 ${ZLIB_LIBRARIES})
 if(NOT WIN32)
   set_target_properties(xml2 PROPERTIES COMPILE_FLAGS "-fPIC")
 else()
-  add_definitions(-DHAVE_ZLIB_H -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE)
+  add_definitions(-DHAVE_ZLIB_H -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -D_CRT_STDC_NO_DEPRECATE -D_WINSOCK_DEPRECATED_NO_WARNINGS)
   set_target_properties(xml2 PROPERTIES COMPILE_FLAGS "/W1")
 endif()
 
