--- a/lib/libstalkerclient/CMakeLists.txt
+++ b/lib/libstalkerclient/CMakeLists.txt
@@ -19,7 +19,4 @@ set(LIBSTALKER_SOURCES
 
 add_library(stalkerclient STATIC ${LIBSTALKER_SOURCES})
 target_link_libraries(stalkerclient ${ZLIB_LIBRARIES} ${LIBXML2_LIBRARIES})
-
-if (NOT WIN32)
-    set_target_properties(stalkerclient PROPERTIES COMPILE_FLAGS "-fPIC")
-endif ()
+set_property(TARGET stalkerclient PROPERTY POSITION_INDEPENDENT_CODE ON)
