--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: kodi-pvr-stalker
 Priority: extra
 Maintainer: Nobody <nobody@kodi.tv>
 Build-Depends: debhelper (>= 9.0.0), cmake,
-               libp8-platform-dev, kodi-addon-dev,
+               kodi-addon-dev,
                zlib1g-dev, libxml2-dev, libjsoncpp-dev
 Standards-Version: 4.1.2
 Section: libs
