update depends libxml2 to version 2.9.10
To fix some Windows UWP builds

--- a/depends/windows/libxml2/CMakeLists.txt
+++ b/depends/windows/libxml2/CMakeLists.txt
@@ -1,6 +1,5 @@
+cmake_minimum_required(VERSION 3.5)
 project(xml2)
-
-cmake_minimum_required(VERSION 2.6)
 
 enable_language(C)
 
@@ -377,7 +376,7 @@ set(WITH_WRITER 0)
 set(WITH_SAX1 0)
 set(WITH_FTP 0)
 set(WITH_HTTP 0)
-set(WITH_VALID 0)
+set(WITH_VALID 1)
 set(WITH_HTML 1)
 set(WITH_LEGACY 0)
 set(WITH_C14N 0)
@@ -392,7 +391,7 @@ set(WITH_ISO8859X 1)
 set(WITH_DEBUG 0)
 set(WITH_MEM_DEBUG 0)
 set(WITH_RUN_DEBUG 0)
-set(WITH_REGEXPS 0)
+set(WITH_REGEXPS 1)
 set(WITH_SCHEMAS 0)
 set(WITH_SCHEMATRON 0)
 set(WITH_MODULES 0)
@@ -404,10 +403,35 @@ if(NOT WIN32)
   configure_file(config.h.cmake ${PROJECT_SOURCE_DIR}/config.h)
 else()
   file(COPY include/win32config.h DESTINATION ${PROJECT_SOURCE_DIR})
-  file(RENAME win32/VC10/config.h config.h)
+  file(COPY win32/VC10/config.h DESTINATION ${PROJECT_SOURCE_DIR})
 endif()
 
+set(prefix ${CMAKE_INSTALL_PREFIX})
+set(exec_prefix "$")
+set(exec_prefix "${exec_prefix}{")
+set(exec_prefix "${exec_prefix}prefix")
+set(exec_prefix "${exec_prefix}}")
+
+set(libdir "$")
+set(libdir "${libdir}{")
+set(libdir "${libdir}exec_prefix")
+set(libdir "${libdir}}/lib")
+
+set(includedir "$")
+set(includedir "${includedir}{")
+set(includedir "${includedir}prefix")
+set(includedir "${includedir}}/include")
+
+set(XML_INCLUDEDIR "-I$")
+set(XML_INCLUDEDIR "${XML_INCLUDEDIR}{")
+set(XML_INCLUDEDIR "${XML_INCLUDEDIR}includedir")
+set(XML_INCLUDEDIR "${XML_INCLUDEDIR}}/libxml2")
+
+set(Z_LIBS "-lz")
+set(ICONV_LIBS "-liconv")
+
 configure_file(include/libxml/xmlversion.h.in ${PROJECT_SOURCE_DIR}/include/libxml/xmlversion.h)
+configure_file(libxml-2.0.pc.in ${PROJECT_SOURCE_DIR}/libxml-2.0.pc)
 
 include_directories(${ZLIB_INCLUDE_DIRS} include)
 file(GLOB SOURCES *.c)
@@ -421,9 +445,10 @@ target_link_libraries(xml2 ${ZLIB_LIBRARIES})
 if(NOT WIN32)
   set_target_properties(xml2 PROPERTIES COMPILE_FLAGS "-fPIC")
 else()
-  add_definitions(-DHAVE_ZLIB_H -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -D_CRT_STDC_NO_DEPRECATE -D_WINSOCK_DEPRECATED_NO_WARNINGS)
+  add_definitions(-DHAVE_ZLIB_H -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE)
   set_target_properties(xml2 PROPERTIES COMPILE_FLAGS "/W1")
 endif()
 
 install(TARGETS xml2 DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
-install(DIRECTORY include/libxml DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
+install(DIRECTORY include/libxml DESTINATION ${CMAKE_INSTALL_PREFIX}/include/libxml2/)
+install(FILES libxml-2.0.pc DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/pkgconfig)
